Initial commit for HTML

--- a/index.html
+++ b/index.html
@@ -5,8 +5,78 @@
     <title>Blog Layout</title>
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <a href="" title="Blog" class="logo"><img src="" alt="logo" class="logo__img"></a>
     </header>
+
+    <nav class="nav">
+        <ul class="navigation">
+            <li class="navigation__element"><a href="" class="navigation__link">JavaScript</a></li>
+            <li class="navigation__element"><a href="" class="navigation__link">CSS</a></li>
+            <li class="navigation__element"><a href="" class="navigation__link navigation__link--active">Latest</a></li>
+            <li class="navigation__element"><a href="" class="navigation__link">HTML</a></li>
+            <li class="navigation__element"><a href="" class="navigation__link">Design</a></li>
+        </ul>
+    </nav>
+
+    <main class="content">
+        <section class="content__section article">
+            <img src="" alt="" class="article__image">
+            <h2 class="article__header">Blogotitle of blogopost about blogoflowers</h2>
+            <time class="article__time">22:58 Jan 01, 2014</time>
+            <span class="article__author">E. Hyperraccoon</span>
+            <ul class="article__social social">
+                <li class="social__element"><a href="" class="social__link social__link--facebook">Facebook</a></li>
+                <li class="social__element"><a href="" class="social__link social__link--google+">Google+</a></li>
+                <li class="social__element"><a href="" class="social__link social__link--twitter">Twitter</a></li>
+                <li class="social__element"><a href="" class="social__link social__link--vk">VK</a></li>
+                <li class="social__element"><a href="" class="social__link social__link--yandex">Yandex</a></li>
+            </ul>
+            <p class="article__text">
+                Lorem ipsum dolor sit amet.
+            </p>
+        </section>
+        <section class="content__section article">
+            <img src="" alt="" class="article__image">
+            <h2 class="article__header">Blogotitle of blogopost about blogoflowers</h2>
+            <time class="article__time">22:58 Jan 01, 2014</time>
+            <span class="article__author">E. Hyperraccoon</span>
+            <ul class="article__social social">
+                <li class="social__element social__element--Facebook">Facebook</li>
+                <li class="social__element social__element--Google+">Google+</li>
+                <li class="social__element social__element--Twitter">Twitter</li>
+                <li class="social__element social__element--VK">VK</li>
+                <li class="social__element social__element--HappyHuman">HappyHuman</li>
+            </ul>
+            <p class="article__text">
+                Lorem ipsum <s>dolor sit</s> amet.
+            </p>
+        </section>
+    </main>
+
+    <aside>
+        <section>
+            <h2>About</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </section>
+        <section>
+            <h2>Some information</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </section>
+        <ul class="tags">
+            <li class="tags__element">Raccoon</li>
+            <li class="tags__element">Raccoon</li>
+            <li class="tags__element">Coon</li>
+            <li class="tags__element">Dog</li>
+            <li class="tags__element">Cat</li>
+            <li class="tags__element">Developer</li>
+            <li class="tags__element">Raccoon</li>
+            <li class="tags__element">Raccoon</li>
+            <li class="tags__element">Coon</li>
+            <li class="tags__element">Dog</li>
+            <li class="tags__element">Cat</li>
+            <li class="tags__element">Developer</li>
+        </ul>
+    </aside>
 </body>
 </html>
