--- a/index.html
+++ b/index.html
@@ -25,70 +25,160 @@
         <li class="navigation__element"><a href="" class="navigation__link">Design</a></li>
     </ul>
 
-    <div class="wrapper">
-        <main class="content">
+    <div class="center-block">
+        <main class="center-block__content content">
             <section class="content__section article">
                 <div class="article__image-wrapper">
                     <img src="images/post1.jpg" alt="post image" class="article__image">
                 </div>
                 <h2 class="article__header">Blogotitle of blogopost about blogoflowers</h2>
-                <svg class="article__time-icon" aria-hidden="true">
-                    <use xlink:href="styles/sprites/sprite.svg#icon-clock"></use>
-                </svg>
-                <time class="article__time">
-                    22:58 Jan 01, 2014
-                </time>
-                <svg class="article__author-icon" aria-hidden="true">
-                    <use xlink:href="styles/sprites/sprite.svg#icon-footstep"></use>
-                </svg>
-                <span class="article__author">E. Hyperraccoon</span>
-                <ul class="article__social social">
-                    <li class="social__element"><a href="" class="social__link social__link--facebook">Facebook</a></li>
-                    <li class="social__element"><a href="" class="social__link social__link--google+">Google+</a></li>
-                    <li class="social__element"><a href="" class="social__link social__link--twitter">Twitter</a></li>
-                    <li class="social__element"><a href="" class="social__link social__link--vk">VK</a></li>
-                    <li class="social__element"><a href="" class="social__link social__link--yandex">Yandex</a></li>
-                </ul>
+                <div class="article__info-wrapper">
+                    <svg class="article__time-icon" aria-hidden="true">
+                        <use xlink:href="styles/sprites/sprite.svg#icon-clock"></use>
+                    </svg>
+                    <time class="article__time">
+                        22:58 Jan 01, 2014
+                    </time>
+                    <svg class="article__author-icon" aria-hidden="true">
+                        <use xlink:href="styles/sprites/sprite.svg#icon-footstep"></use>
+                    </svg>
+                    <span class="article__author">E. Hyperraccoon</span>
+                    <ul class="article__social social">
+                        <li class="social__element">
+                            <a href="" class="social__link social__link--facebook">
+                                <svg class="article__social-icon article__social-icon--facebook" aria-hidden="true">
+                                    <use xlink:href="styles/sprites/sprite.svg#icon-facebook"></use>
+                                </svg>
+                                <span class="social__count social__count--facebook">16</span>
+                            </a>
+                        </li>
+                        <li class="social__element">
+                            <a href="" class="social__link social__link--gplus">
+                                <svg class="article__social-icon article__social-icon--gplus" aria-hidden="true">
+                                    <use xlink:href="styles/sprites/sprite.svg#icon-gplus"></use>
+                                </svg>
+                                <span class="social__count social__count--gplus">7</span>
+                            </a>
+                        </li>
+                        <li class="social__element">
+                            <a href="" class="social__link social__link--twitter">
+                                <svg class="article__social-icon article__social-icon--twitter" aria-hidden="true">
+                                    <use xlink:href="styles/sprites/sprite.svg#icon-twitter"></use>
+                                </svg>
+                                <span class="social__count social__count--twitter">15</span>
+                            </a>
+                        </li>
+                        <li class="social__element">
+                            <a href="" class="social__link social__link--vk">
+                                <svg class="article__social-icon article__social-icon--vk" aria-hidden="true">
+                                    <use xlink:href="styles/sprites/sprite.svg#icon-vk"></use>
+                                </svg>
+                                <span class="social__count social__count--vk">16</span>
+                            </a>
+                        </li>
+                        <li class="social__element">
+                            <a href="" class="social__link social__link--yaru">
+                                <svg class="article__social-icon article__social-icon--yaru" aria-hidden="true">
+                                    <use xlink:href="styles/sprites/sprite.svg#icon-yaru"></use>
+                                </svg>
+                                <span class="social__count social__count--yaru">1</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
                 <p class="article__text">
-                    Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus at deleniti dolorem doloremque
+                    exercitationem fugit iste, labore laudantium libero minus necessitatibus non nostrum officia
+                    quibusdam quisquam repellat tempora temporibus veniam voluptas voluptatibus! Accusantium aspernatur
+                    atque eaque et ex ipsa libero numquam odit officia quod ratione sunt, unde. Accusantium aliquid
+                    corporis dicta, eveniet fugit iure, nemo quia quisquam repellendus reprehenderit soluta.
                 </p>
             </section>
             <section class="content__section article">
                 <div class="article__image-wrapper">
                     <img src="images/post2.jpg" alt="post image" class="article__image">
                 </div>
-                <h2 class="article__header">Blogotitle of blogopost about blogoflowers</h2>
-                <svg class="article__time-icon" aria-hidden="true">
-                    <use xlink:href="styles/sprites/sprite.svg#icon-clock"></use>
-                </svg>
-                <time class="article__time">
-                    22:58 Jan 01, 2014
-                </time>
-                <svg class="article__author-icon" aria-hidden="true">
-                    <use xlink:href="styles/sprites/sprite.svg#icon-footstep"></use>
-                </svg>
-                <span class="article__author">E. Hyperraccoon</span>
-                <ul class="article__social social">
-                    <li class="social__element"><a href="" class="social__link social__link--facebook">Facebook</a></li>
-                    <li class="social__element"><a href="" class="social__link social__link--google+">Google+</a></li>
-                    <li class="social__element"><a href="" class="social__link social__link--twitter">Twitter</a></li>
-                    <li class="social__element"><a href="" class="social__link social__link--vk">VK</a></li>
-                    <li class="social__element"><a href="" class="social__link social__link--yandex">Yandex</a></li>
-                </ul>
+                <h2 class="article__header">Blogotitle about colorful</h2>
+                <div class="article__info-wrapper">
+                    <svg class="article__time-icon" aria-hidden="true">
+                        <use xlink:href="styles/sprites/sprite.svg#icon-clock"></use>
+                    </svg>
+                    <time class="article__time">
+                        22:58 Jan 01, 2014
+                    </time>
+                    <svg class="article__author-icon" aria-hidden="true">
+                        <use xlink:href="styles/sprites/sprite.svg#icon-footstep"></use>
+                    </svg>
+                    <span class="article__author">E. Hyperraccoon</span>
+                    <ul class="article__social social">
+                        <li class="social__element">
+                            <a href="" class="social__link social__link--facebook">
+                                <svg class="article__social-icon article__social-icon--facebook" aria-hidden="true">
+                                    <use xlink:href="styles/sprites/sprite.svg#icon-facebook"></use>
+                                </svg>
+                                <span class="social__count social__count--facebook">16</span>
+                            </a>
+                        </li>
+                        <li class="social__element">
+                            <a href="" class="social__link social__link--gplus">
+                                <svg class="article__social-icon article__social-icon--gplus" aria-hidden="true">
+                                    <use xlink:href="styles/sprites/sprite.svg#icon-gplus"></use>
+                                </svg>
+                                <span class="social__count social__count--gplus">7</span>
+                            </a>
+                        </li>
+                        <li class="social__element">
+                            <a href="" class="social__link social__link--twitter">
+                                <svg class="article__social-icon article__social-icon--twitter" aria-hidden="true">
+                                    <use xlink:href="styles/sprites/sprite.svg#icon-twitter"></use>
+                                </svg>
+                                <span class="social__count social__count--twitter">15</span>
+                            </a>
+                        </li>
+                        <li class="social__element">
+                            <a href="" class="social__link social__link--vk">
+                                <svg class="article__social-icon article__social-icon--vk" aria-hidden="true">
+                                    <use xlink:href="styles/sprites/sprite.svg#icon-vk"></use>
+                                </svg>
+                                <span class="social__count social__count--vk">16</span>
+                            </a>
+                        </li>
+                        <li class="social__element">
+                            <a href="" class="social__link social__link--yaru">
+                                <svg class="article__social-icon article__social-icon--yaru" aria-hidden="true">
+                                    <use xlink:href="styles/sprites/sprite.svg#icon-yaru"></use>
+                                </svg>
+                                <span class="social__count social__count--yaru">1</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
                 <p class="article__text">
-                    Lorem ipsum <s>dolor sit</s> amet.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam cum ducimus excepturi in
+                    ipsum maiores possimus quibusdam <s> similique, voluptatibus! Architecto asperiores autem, culpa
+                    cumque debitis delectus dolore eaque est facilis </s> id itaque iure iusto laudantium nesciunt odit
+                    possimus quod rerum sunt tempora voluptatem. Blanditiis culpa dolor doloremque dolorum ipsa labore
+                    minima molestias mollitia nihil, quos, sapiente ullam, vitae. Inventore!
                 </p>
             </section>
         </main>
 
-        <aside>
-            <section>
-                <h2>About</h2>
-                <p>Lorem ipsum dolor sit amet.</p>
+        <aside class="center-block__aside">
+            <section class="note">
+                <h2 class="note__header note__header--question">About</h2>
+                <p class="note__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam dicta
+                    dignissimos ducimus est impedit libero molestiae quis, quo sint tempora velit voluptas,
+                    voluptatibus. Ab consequatur debitis dicta dolores enim error impedit inventore ipsa ipsam molestias
+                    mollitia nam, nulla odio optio pariatur porro possimus praesentium quam, reiciendis, similique.
+                    Accusantium, labore!</p>
             </section>
-            <section>
-                <h2>Some information</h2>
-                <p>Lorem ipsum dolor sit amet.</p>
+            <section class="note">
+                <h2 class="note__header note__header--exclamation">Some information</h2>
+                <p class="note__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, at atque dolor eum
+                    odit officiis pariatur porro veniam? Aperiam atque, culpa cupiditate dignissimos enim esse fuga
+                    fugit, inventore ipsam maxime praesentium repellat similique, temporibus. Ab, accusantium amet
+                    dignissimos eos et excepturi fugit hic laudantium nihil odio tempora vero. Perspiciatis,
+                    placeat.</p>
             </section>
             <ul class="tags">
                 <li class="tags__element">Raccoon</li>
