Fixed SVG-icons, added build script, divided styles with BEM methodology

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Blog Layout</title>
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -46,7 +47,7 @@
                     <ul class="article__social social">
                         <li class="social__element">
                             <a href="" class="social__link social__link--facebook">
-                                <svg class="article__social-icon article__social-icon--facebook" aria-hidden="true">
+                                <svg class="social__icon social__icon--facebook" aria-hidden="true">
                                     <use xlink:href="styles/sprites/sprite.svg#icon-facebook"></use>
                                 </svg>
                                 <span class="social__count social__count--facebook">16</span>
@@ -54,7 +55,7 @@
                         </li>
                         <li class="social__element">
                             <a href="" class="social__link social__link--gplus">
-                                <svg class="article__social-icon article__social-icon--gplus" aria-hidden="true">
+                                <svg class="social__icon social__icon--gplus" aria-hidden="true">
                                     <use xlink:href="styles/sprites/sprite.svg#icon-gplus"></use>
                                 </svg>
                                 <span class="social__count social__count--gplus">7</span>
@@ -62,7 +63,7 @@
                         </li>
                         <li class="social__element">
                             <a href="" class="social__link social__link--twitter">
-                                <svg class="article__social-icon article__social-icon--twitter" aria-hidden="true">
+                                <svg class="social__icon social__icon--twitter" aria-hidden="true">
                                     <use xlink:href="styles/sprites/sprite.svg#icon-twitter"></use>
                                 </svg>
                                 <span class="social__count social__count--twitter">15</span>
@@ -70,7 +71,7 @@
                         </li>
                         <li class="social__element">
                             <a href="" class="social__link social__link--vk">
-                                <svg class="article__social-icon article__social-icon--vk" aria-hidden="true">
+                                <svg class="social__icon social__icon--vk" aria-hidden="true">
                                     <use xlink:href="styles/sprites/sprite.svg#icon-vk"></use>
                                 </svg>
                                 <span class="social__count social__count--vk">16</span>
@@ -78,7 +79,7 @@
                         </li>
                         <li class="social__element">
                             <a href="" class="social__link social__link--yaru">
-                                <svg class="article__social-icon article__social-icon--yaru" aria-hidden="true">
+                                <svg class="social__icon social__icon--yaru" aria-hidden="true">
                                     <use xlink:href="styles/sprites/sprite.svg#icon-yaru"></use>
                                 </svg>
                                 <span class="social__count social__count--yaru">1</span>
@@ -113,7 +114,7 @@
                     <ul class="article__social social">
                         <li class="social__element">
                             <a href="" class="social__link social__link--facebook">
-                                <svg class="article__social-icon article__social-icon--facebook" aria-hidden="true">
+                                <svg class="social__icon social__icon--facebook" aria-hidden="true">
                                     <use xlink:href="styles/sprites/sprite.svg#icon-facebook"></use>
                                 </svg>
                                 <span class="social__count social__count--facebook">16</span>
@@ -121,7 +122,7 @@
                         </li>
                         <li class="social__element">
                             <a href="" class="social__link social__link--gplus">
-                                <svg class="article__social-icon article__social-icon--gplus" aria-hidden="true">
+                                <svg class="social__icon social__icon--gplus" aria-hidden="true">
                                     <use xlink:href="styles/sprites/sprite.svg#icon-gplus"></use>
                                 </svg>
                                 <span class="social__count social__count--gplus">7</span>
@@ -129,7 +130,7 @@
                         </li>
                         <li class="social__element">
                             <a href="" class="social__link social__link--twitter">
-                                <svg class="article__social-icon article__social-icon--twitter" aria-hidden="true">
+                                <svg class="social__icon social__icon--twitter" aria-hidden="true">
                                     <use xlink:href="styles/sprites/sprite.svg#icon-twitter"></use>
                                 </svg>
                                 <span class="social__count social__count--twitter">15</span>
@@ -137,7 +138,7 @@
                         </li>
                         <li class="social__element">
                             <a href="" class="social__link social__link--vk">
-                                <svg class="article__social-icon article__social-icon--vk" aria-hidden="true">
+                                <svg class="social__icon social__icon--vk" aria-hidden="true">
                                     <use xlink:href="styles/sprites/sprite.svg#icon-vk"></use>
                                 </svg>
                                 <span class="social__count social__count--vk">16</span>
@@ -145,7 +146,7 @@
                         </li>
                         <li class="social__element">
                             <a href="" class="social__link social__link--yaru">
-                                <svg class="article__social-icon article__social-icon--yaru" aria-hidden="true">
+                                <svg class="social__icon social__icon--yaru" aria-hidden="true">
                                     <use xlink:href="styles/sprites/sprite.svg#icon-yaru"></use>
                                 </svg>
                                 <span class="social__count social__count--yaru">1</span>
